Edit sample and README file

--- a/README
+++ b/README
@@ -7,8 +7,8 @@ print vk.getServerTime()
 
 HOW TO AUTHORIZE YOUR WEB APP (bottle.py application as example)
 =================================================
-1) User must go to this link
-<a href="http://api.vkontakte.ru/oauth/authorize?client_id=YOUR_APP_ID&scope=photos,friends&redirect_uri=YOUR_RETURN_URL&response_type=code">Authorize me!</a>
+1) User must go to this link and add PERMISSIONS (from this page http://goo.gl/mj4zg)
+<a href="http://api.vkontakte.ru/oauth/authorize?client_id=YOUR_APP_ID&scope=PERMISSIONS&redirect_uri=YOUR_RETURN_URL&response_type=code">Authorize me!</a>
 
 2) You must to store response CODE on your YOUR_RETURN_URL and receive your ACCESS_TOKEN to your application
 code = request.GET.get('code')
